# PipeEdge

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  README_Binary_Diversification.md  README_Profiler.md  README_Scheduler.md  b_runtime.py  baseline.py  graph.py  lz4.py  model_cfg.py  monitoring.py  partition.py  pipeline.py  profile.py  profiler.py  profiler_results_to_device_types.py  profiler_results_to_models.py  push.sh  pyproject.toml  requirements.txt  revauct.py  runtime.py  save_model_weights.py  save_weights.py  simulator.py  test.py  transformer.py
.github/workflows/: ci.yml
baseline/: baseline.py  deit_baseline.py
edgepipe/: __init__.py
edgepipe/comm/: __init__.py
edgepipe/comm/p2p/: __init__.py  util.py
edgepipe/comm/rpc/: __init__.py  transformers.py
edgepipe/models/transformers/: __init__.py  bert.py  deit.py  vit.py
edgepipe/monitoring/: __init__.py
edgepipe/quantization/: __init__.py  basic_op.py  hook.py
edgepipe/sched/: scheduler.py  yaml_files.py
exp/revauct/: generate_networks.py  generate_networks.sh  simulate_revauct.py  simulate_revauct.sh
partition/: CMakeLists.txt  README.md  partition.cpp  sched-pipeline.cpp  yaml_types.h
src-native/: CMakeLists.txt  sched-pipeline.cpp  schedule.cpp  schedule.h  yaml_types.h
src/pipeedge/: __init__.py
src/pipeedge/comm/: __init__.py
src/pipeedge/comm/p2p/: __init__.py  util.py
src/pipeedge/comm/rpc/: __init__.py
src/pipeedge/models/: __init__.py
src/pipeedge/models/transformers/: __init__.py  bert.py  deit.py  vit.py
src/pipeedge/monitoring/: __init__.py
src/pipeedge/quantization/: basic_op.py  clamp_op.py  hook.py
src/pipeedge/sched/: __init__.py  revauct.py  scheduler.py  yaml_types.py
test/: README.md
test/comm/: __init__.py
test/comm/p2p/: __init__.py  test_context.py
test/comm/rpc/: __init__.py  test_context.py
test/quant/: __init__.py  test_quant.py
test/sched/: __init__.py  test_yaml_types.py
tools/: bert_save_input.py  bert_save_weights.py  create_bandwidth_playbook.py  create_playbook.py  deit_save_weights.py  profile.py  read_pth_files.py  vit_save_weights.py
utils/: __init__.py  controller.py  data.py  quant.py  threads.py
